--- a/test/fixtures/tickets.yml
+++ b/test/fixtures/tickets.yml
@@ -4,6 +4,7 @@ one:
   price: 9.99
   ticket_type: paper
   created_at: <%= 10.minutes.ago %>
+  location: MyCity
   user: one
 
 two:
@@ -13,6 +14,7 @@ two:
   ticket_type: paper
   created_at: <%= 2.hours.ago %>
   user: one
+  location: MyCity
 
 most_recent:
   title: Most recent
@@ -21,6 +23,7 @@ most_recent:
   ticket_type: paper
   created_at: <%= Time.zone.now %>
   user: one
+  location: MyCity
 
 other_user_ticket:
   title: MyText
@@ -29,6 +32,7 @@ other_user_ticket:
   ticket_type: paper
   created_at: <%= 30.minutes.ago %>
   user: two
+  location: MyCity
 
 <% 30.times do |n| %>
 ticket_<%= n %>:
@@ -37,5 +41,6 @@ ticket_<%= n %>:
   price: 9.99
   ticket_type: paper
   created_at: <%= 42.days.ago %>
+  location: MyCity
   user: one
 <% end %>
