add partial tickets to categories index, show

--- a/test/fixtures/tickets.yml
+++ b/test/fixtures/tickets.yml
@@ -6,6 +6,7 @@ one:
   created_at: <%= 10.minutes.ago %>
   location: MyCity
   user: one
+  category: 
 
 two:
   title: MyText
@@ -15,6 +16,7 @@ two:
   created_at: <%= 2.hours.ago %>
   user: one
   location: MyCity
+  category_id: 3
 
 most_recent:
   title: Most recent
@@ -24,6 +26,7 @@ most_recent:
   created_at: <%= Time.zone.now %>
   user: one
   location: MyCity
+  category_id: 3
 
 other_user_ticket:
   title: MyText
@@ -33,6 +36,7 @@ other_user_ticket:
   created_at: <%= 30.minutes.ago %>
   user: two
   location: MyCity
+  category_id: 3
 
 <% 30.times do |n| %>
 ticket_<%= n %>:
@@ -40,7 +44,8 @@ ticket_<%= n %>:
   content: <%= Faker::Lorem.sentence(5) %>
   price: 9.99
   ticket_type: paper
-  created_at: <%= 42.days.ago %>
+  created_at: <%= 2.days.ago %>
   location: MyCity
   user: one
+  category_id: 3
 <% end %>
