--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,25 +1,21 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 main_category:
-  id: 1
   text: MyString
   main_id: nil
   created_at: <%= 3.days.ago %>
 
 subcategory_1:
-  id: 2
   text: MyString
-  main_id: 1
+  main: main_category
   created_at: <%= 3.days.ago %>
 
 subcategory_2:
-  id: 3
   text: MyString
-  main_id: 1
+  main: main_category
   created_at: <%= 3.days.ago %>
 
 one:
-  id: 4
   text: MyString
-  main_id: 1
+  main: main_category
   created_at: <%= 3.days.ago %>
